--- a/pacific/yurts.html
+++ b/pacific/yurts.html
@@ -17,7 +17,7 @@
         <h2>The Yurts at Pacific Trails</h2>
         <dl>
             <dt>What is a yurt?</dt>
-            <dd>Our luxury yurts are permanant structures four feet off the ground. Each yurt has canvas walls, a wooden floor, and a roof dome that can be opened.</dd>
+            <dd>Our luxury yurts are permanent structures four feet off the ground. Each yurt has canvas walls, a wooden floor, and a roof dome that can be opened.</dd>
             <dt>How are the yurts furnished?</dt>
             <dd>Each yurt is furnished with a queen sized bed with down quilt and gas-fired stove. The luxury camping experience also includes electricity and a sink with hot and cold running water. Shower and restroom are located in the lodge.</dd>
             <dt>What should I bring?</dt>
@@ -26,5 +26,6 @@
     </main>
     <footer>
         <small>Copyright &copy; 2016 Pacific Trails Resort
+            <br>
         <a href="mailto:nathan@estrem.com">nathan@estrem.com</a></small></footer>
 </body>
