--- a/pacific/index.html
+++ b/pacific/index.html
@@ -10,12 +10,13 @@
 <body>
     <header>
         <h1>Pacific Trails Resort</h1></header>
-    <nav><b><a href="index.html">Home</a>&nbsp;
+    <nav><a href="index.html">Home</a>&nbsp;
         <a href="yurts.html">Yurts</a>&nbsp;
         <a href=activities.html>Activities</a>&nbsp;
-        <a href=reservations.html>Reservations</a>&nbsp;</b></nav>
+        <a href=reservations.html>Reservations</a>&nbsp;</nav>
     <main>
         <h2>Enjoy Nature in Luxury</h2>
+        <img alt="Coast" width="320" height="250" src="images/coast.jpg">
         <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
         <ul>
             <li>Private yurts with decks overlooking the ocean</li>
@@ -35,6 +36,6 @@
         </div>
     </main>
     <footer>
-        <small>Copyright &copy; 2016 Pacific Trails Resort
-        <a href="mailto:nathan@estrem.com">nathan@estrem.com</a></small></footer>
+        Copyright &copy; 2016 Pacific Trails Resort
+        <a href="mailto:nathan@estrem.com">nathan@estrem.com</a></footer>
 </body>
