--- a/pacific/yurts.html
+++ b/pacific/yurts.html
@@ -10,12 +10,13 @@
 <body>
     <header>
         <h1>Pacific Trails Resort</h1></header>
-    <nav><b><a href="index.html">Home</a>&nbsp;
+    <nav><a href="index.html">Home</a>&nbsp;
         <a href="yurts.html">Yurts</a>&nbsp;
         <a href=activities.html>Activities</a>&nbsp;
-        <a href=reservations.html>Reservations</a>&nbsp;</b></nav>
+        <a href=reservations.html>Reservations</a>&nbsp;</nav>
     <main>
         <h2>The Yurts at Pacific Trails</h2>
+        <img alt="Yurt" width="320" height="250" src="images/yurt.jpg">
         <dl>
             <dt>What is a yurt?</dt>
             <dd>Our luxury yurts are permanent structures four feet off the ground. Each yurt has canvas walls, a wooden floor, and a roof dome that can be opened.</dd>
@@ -26,7 +27,7 @@
         </dl>
     </main>
     <footer>
-        <small>Copyright &copy; 2016 Pacific Trails Resort
-            <br>
-        <a href="mailto:nathan@estrem.com">nathan@estrem.com</a></small></footer>
+        Copyright &copy; 2016 Pacific Trails Resort
+        <br>
+        <a href="mailto:nathan@estrem.com">nathan@estrem.com</a></footer>
 </body>
