--- a/pacific/activities.html
+++ b/pacific/activities.html
@@ -8,24 +8,27 @@
 </head>
 
 <body>
-    <header>
-        <h1>Pacific Trails Resort</h1></header>
-    <nav><a href="index.html">Home</a>&nbsp;
-        <a href="yurts.html">Yurts</a>&nbsp;
-        <a href=activities.html>Activities</a>&nbsp;
-        <a href=reservations.html>Reservations</a>&nbsp;</nav>
-    <main>
-        <h2>Activities at Pacific Trails</h2>
-        <img alt="Trail" width="320" height="250" src="images/trail.jpg">
-        <h3>Hiking</h3>
-        <p>Pacific Trails Resort has 5 miles of and is adjacent to a state park. Go it alone or join one of our guided hikes.</p>
-        <h3>Kayaking</h3>
-        <p>Ocean kuyaks are available for guest use.</p>
-        <h3>Bird Watching</h3>
-        <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
-    </main>
-    <footer>
-        Copyright &copy; 2016 Pacific Trails Resort
-        <br>
-        <a href="mailto:nathan@estrem.com">nathan@estrem.com</a></footer>
+    <div id="wrapper">
+        <header>
+            <h1>Pacific Trails Resort</h1></header>
+        <nav><a href="index.html">Home</a>&nbsp;
+            <a href="yurts.html">Yurts</a>&nbsp;
+            <a href=activities.html>Activities</a>&nbsp;
+            <a href=reservations.html>Reservations</a>&nbsp;</nav>
+        <div id="trailhero"></div>
+        <main>
+            <h2>Activities at Pacific Trails</h2>
+            <h3>Hiking</h3>
+            <p>Pacific Trails Resort has 5 miles of and is adjacent to a state park. Go it alone or join one of our guided hikes.</p>
+            <h3>Kayaking</h3>
+            <p>Ocean kuyaks are available for guest use.</p>
+            <h3>Bird Watching</h3>
+            <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
+        </main>
+        <footer>
+            Copyright &copy; 2016 Pacific Trails Resort
+            <br>
+            <a href="mailto:nathan@estrem.com">nathan@estrem.com</a>
+        </footer>
+    </div>
 </body>
