--- a/pacific/activities.html
+++ b/pacific/activities.html
@@ -4,7 +4,13 @@
 <head>
     <title>Pacific Trails Resort :: Activities</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A few activities that await you at our resort.">
     <link rel="stylesheet" href="pacific.css">
+    <!--[if 1t IE 9]>
+ +    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+ +    </script>
+ +    <![endif]-->
 </head>
 
 <body>
@@ -28,6 +34,39 @@
             <p>Ocean kayaks are available for guest use.</p>
             <h3>Bird Watching</h3>
             <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
+            <div id="gallery">
+                <figure><img src="images/photo2.jpg" width="200" height="150"></figure>
+                <ul>
+                    <li>
+                        <a href="images/photo2.jpg"><img src="images/photo2thumb.jpg" alt="Beautiful Beaches">
+                            <span><img src="images/photo2.jpg" width="200" height="150" alt="Beautiful Beaches"><br>
+                                Beautiful Beaches
+                         </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="images/photo3.jpg"><img src="images/photo3thumb.jpg" alt="Woods to Explore!">
+                            <span><img src="images/photo3.jpg" width="200" height="150" alt="Woods to Explore!"><br>
+                                Woods to Explore!
+                         </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="images/photo4.jpg"><img src="images/photo4thumb.jpg" alt="Awesome Views">
+                            <span><img src="images/photo4.jpg" width="200" height="150" alt="Awesome Views"><br>
+                                Awesome Views
+                         </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="images/photo5.jpg"><img src="images/photo5thumb.jpg" alt="Hiker's Dream">
+                            <span><img src="images/photo5.jpg" width="200" height="150" alt="Hiker's Dream"><br>
+                                Hiker's Dream
+                         </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </main>
         <footer>
             Copyright &copy; 2016 Pacific Trails Resort
