--- a/pacific/index.html
+++ b/pacific/index.html
@@ -4,7 +4,13 @@
 <head>
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A luxurious yurt get-away location just off the beach with heated pools, activities and dining">
     <link rel="stylesheet" href="pacific.css">
+    <!--[if 1t IE 9]>
+ +    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+ +    </script>
+ +    <![endif]-->
 </head>
 
 <body>
@@ -22,6 +28,11 @@
         <div id="homehero"></div>
         <main>
             <h2>Enjoy Nature in Luxury</h2>
+            <video controls="controls" poster="/media/pacifictrailsresort.jpeg" width="320" height="240">
+                <source src="/media/PacificTrailsResort.mp4" type="video/mp4">
+                <source src="/media/PacificTrailsResort.ogv" type="video/ogv">
+                <source src="/media/pacifictrailsresort.swf" type="video/swf">
+            </video>
             <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
             <ul>
                 <li>Private yurts with decks overlooking the ocean</li>
@@ -35,7 +46,9 @@
                 <br> 12010 Pacific Trails Road
                 <br> Zephyr, CA 95555
                 <br>
-                <br> 888-555-5555
+                <br>
+                <a id="mobile" href="tel:888-555-5555"> 888-555-5555</a>
+                <span id="desktop"> 888-555-5555</span>
                 <br>
                 <br>
             </div>
