--- a/pacific/yurts.html
+++ b/pacific/yurts.html
@@ -4,7 +4,13 @@
 <head>
     <title>Pacific Trails Resort :: Yurts</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Our luxury yurt packages.">
     <link rel="stylesheet" href="pacific.css">
+    <!--[if 1t IE 9]>
+ +    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+ +    </script>
+ +    <![endif]-->
 </head>
 
 <body>
@@ -30,6 +36,35 @@
                 <dt>What should I bring?</dt>
                 <dd>Bring a sense of adventure and some time to relax! Most guests also pack comfortable walking shoes and plan to dress for changing weather with layers of clothing.</dd>
             </dl>
+            <br>
+            <h3>Yurt Packages</h3>
+            <p>A variety of luxury yurt packages are available. Choose a package below and contact us to begin your reservation. We're happy to build a custom package just for you!</p>
+            <table>
+                <tr>
+                    <th>Package Name</th>
+                    <th>Description</th>
+                    <th>Nights</th>
+                    <th>Cost per Person</th>
+                </tr>
+                <tr>
+                    <td>Weekend Escape</td>
+                    <td class="text">Two breakfasts, a trail map, and a picnic snack</td>
+                    <td>2</td>
+                    <td>$450</td>
+                </tr>
+                <tr>
+                    <td>Zen Retreat</td>
+                    <td class="text">Four breakfasts, a trail map, a picnic snack, and a pass for the daily sunrise yoga session</td>
+                    <td>4</td>
+                    <td>$600</td>
+                </tr>
+                <tr>
+                    <td>Kayak Away</td>
+                    <td class="text">Two breakfasts, two hours of kuyak rental daily, and a trail map</td>
+                    <td>2</td>
+                    <td>$500</td>
+                </tr>
+            </table>
         </main>
         <footer>
             Copyright &copy; 2016 Pacific Trails Resort
