--- a/pacific/activities.html
+++ b/pacific/activities.html
@@ -35,7 +35,7 @@
             <h3>Bird Watching</h3>
             <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
             <div id="gallery">
-                <figure><img src="images/photo2.jpg" width="200" height="150"></figure>
+                <figure><img src="images/photo2.jpg" width="200" height="150" alt="Beautiful Beaches"></figure>
                 <ul>
                     <li>
                         <a href="images/photo2.jpg"><img src="images/photo2thumb.jpg" alt="Beautiful Beaches">
